[gd_scene load_steps=11 format=3 uid="uid://bpck4nf2x81gt"]

[ext_resource type="Texture2D" uid="uid://dl8dw08og2gr8" path="res://Images/Backgrounds/Placeholder_backgorund_minigames.jpg" id="1_g5r1r"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/MinigamesPanel.gd" id="1_hj3fy"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="2_a4mhf"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/BackButton.gd" id="3_5cpqd"]
[ext_resource type="Texture2D" uid="uid://bowy12qgsf8t3" path="res://Images/UI/Buttons/Button.png" id="3_jssi5"]
[ext_resource type="Texture2D" uid="uid://2rpmid1gnwur" path="res://Images/UI/Buttons/RoundButton.png" id="4_vgte1"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/StartButton.gd" id="4_wha20"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/HowToPlayButton.gd" id="5_6yy22"]
[ext_resource type="Texture2D" uid="uid://6adv5bnfl4ff" path="res://Images/UI/Buttons/Back.png" id="5_eyy1f"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/HowToPlay.gd" id="10_g1eg1"]

[node name="MinigamesPanel" type="Node2D"]
script = ExtResource("1_hj3fy")

[node name="GameBackgorund" type="Sprite2D" parent="."]
modulate = Color(0.32549, 0.568627, 0.447059, 1)
position = Vector2(572.25, 325)
scale = Vector2(1.56667, 1.32245)
texture = ExtResource("1_g5r1r")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.258824)
position = Vector2(584, 319)
texture = ExtResource("1_g5r1r")

[node name="Back" type="Node2D" parent="."]
process_mode = 3
position = Vector2(220, -305)
scale = Vector2(0.7, 0.7)
script = ExtResource("3_5cpqd")
metadata/_edit_group_ = true

[node name="BackButton" type="TextureButton" parent="Back"]
offset_left = -2.0
offset_top = 546.0
offset_right = 104.0
offset_bottom = 646.0
texture_normal = ExtResource("4_vgte1")
texture_pressed = ExtResource("4_vgte1")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Back"]
position = Vector2(51, 595)
scale = Vector2(0.124325, 0.124325)
texture = ExtResource("5_eyy1f")

[node name="Panel" type="Node2D" parent="."]

[node name="MinigameName" type="Label" parent="Panel"]
offset_left = 218.0
offset_top = 104.0
offset_right = 952.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("2_a4mhf")
theme_override_font_sizes/font_size = 50
text = "Minigame name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Record" type="Label" parent="Panel"]
offset_left = 215.0
offset_top = 186.0
offset_right = 950.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("2_a4mhf")
theme_override_font_sizes/font_size = 40
text = "Record"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="Panel"]
process_mode = 3
offset_left = 448.0
offset_top = 277.0
offset_right = 711.0
offset_bottom = 363.0
texture_normal = ExtResource("3_jssi5")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_wha20")

[node name="Label" type="Label" parent="Panel/StartButton"]
layout_mode = 0
offset_left = 23.0
offset_top = 17.0
offset_right = 238.0
offset_bottom = 65.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.556863)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_a4mhf")
theme_override_font_sizes/font_size = 35
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlayButton" type="TextureButton" parent="Panel"]
process_mode = 3
offset_left = 448.0
offset_top = 357.0
offset_right = 711.0
offset_bottom = 443.0
texture_normal = ExtResource("3_jssi5")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_6yy22")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Panel/HowToPlayButton"]
layout_mode = 0
offset_left = 23.0
offset_top = 17.0
offset_right = 238.0
offset_bottom = 65.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.556863)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_a4mhf")
theme_override_font_sizes/font_size = 35
text = "Jak grac"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlay" type="Node2D" parent="."]
visible = false
script = ExtResource("10_g1eg1")

[node name="Previous" type="Node2D" parent="HowToPlay"]
process_mode = 3
visible = false
position = Vector2(220, 237)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="BackButton" type="TextureButton" parent="HowToPlay/Previous"]
offset_left = -2.0
offset_top = 546.0
offset_right = 104.0
offset_bottom = 646.0
texture_normal = ExtResource("4_vgte1")
texture_pressed = ExtResource("4_vgte1")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Icon" type="Sprite2D" parent="HowToPlay/Previous"]
position = Vector2(51, 595)
scale = Vector2(0.124325, 0.124325)
texture = ExtResource("5_eyy1f")

[node name="Next" type="Node2D" parent="HowToPlay"]
process_mode = 3
position = Vector2(898, 238)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="NextButton" type="TextureButton" parent="HowToPlay/Next"]
offset_left = -2.0
offset_top = 546.0
offset_right = 104.0
offset_bottom = 646.0
texture_normal = ExtResource("4_vgte1")
texture_pressed = ExtResource("4_vgte1")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="HowToPlay/Next"]
position = Vector2(51, 595)
rotation = 3.14159
scale = Vector2(0.124325, 0.124325)
texture = ExtResource("5_eyy1f")

[node name="SnackNavigator" type="Node2D" parent="HowToPlay"]

[node name="Page1" type="RichTextLabel" parent="HowToPlay/SnackNavigator"]
offset_left = 282.0
offset_top = 161.0
offset_right = 893.0
offset_bottom = 516.0
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "Hej, maÅ‚y programisto! ðŸŽ‰ PomÃ³Å¼ naszemu zwierzakowi dojÅ›Ä‡ po kafelkach do miski peÅ‚nej pysznoÅ›ci! Twoim zadaniem jest wpisanie odpowiednich komend, ktÃ³re poprowadzÄ… zwierzaka do celu.
[b]Jak graÄ‡?[/b]
SpÃ³jrz na kafelki â€“ To jest droga do miski! OkreÅ›l, ile krokÃ³w potrzebujesz w kaÅ¼dym kierunku.
Wpisz komendy:
[b]- forward â€“  [/b] ruch do przodu
[b]- left â€“[/b] skrÄ™t w lewo
[b]- right â€“[/b] skrÄ™t w prawo
[b]- back â€“[/b] krok w tyÅ‚
"
autowrap_mode = 2

[node name="Page2" type="RichTextLabel" parent="HowToPlay/SnackNavigator"]
visible = false
offset_left = 285.0
offset_top = 149.0
offset_right = 913.0
offset_bottom = 569.0
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "Dodaj liczbÄ™ krokÃ³w â€“ Po komendzie wpisz w nawiasie, ile kafelkÃ³w zwierzak ma przejÅ›Ä‡, np.:
[b]- forward(3) â€“[/b] 3 kroki do przodu
[b]- left(1) â€“[/b] skrÄ™t w lewo o 1 krok
Po klikniÄ™ciu \"Wykonaj\" obserwuj jak zwierzak idzie do miski!

[b]PrzykÅ‚ad[/b]
Aby przejÅ›Ä‡ 4 kafelki do przodu, a potem skrÄ™ciÄ‡ w lewo i przejÅ›Ä‡ 2 kafelki, wpisz: 
	[b]forward(4)
	left(2)[/b]

PamiÄ™taj, by wpisywaÄ‡ komendy dokÅ‚adnie tak, jak pokazano. Powodzenia! ðŸš€"
autowrap_mode = 2

[connection signal="mouse_entered" from="Back/BackButton" to="Back" method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="Back/BackButton" to="Back" method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="Back/BackButton" to="Back" method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="Panel/StartButton" to="Panel/StartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/StartButton" to="Panel/StartButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/StartButton" to="Panel/StartButton" method="_on_pressed"]
[connection signal="mouse_entered" from="Panel/HowToPlayButton" to="Panel/HowToPlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/HowToPlayButton" to="Panel/HowToPlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/HowToPlayButton" to="Panel/HowToPlayButton" method="_on_pressed"]
[connection signal="visibility_changed" from="HowToPlay" to="HowToPlay" method="_on_visibility_changed"]
[connection signal="mouse_entered" from="HowToPlay/Previous/BackButton" to="HowToPlay" method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="HowToPlay/Previous/BackButton" to="HowToPlay" method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="HowToPlay/Previous/BackButton" to="HowToPlay" method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="HowToPlay/Next/NextButton" to="HowToPlay" method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="HowToPlay/Next/NextButton" to="HowToPlay" method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="HowToPlay/Next/NextButton" to="HowToPlay" method="_on_next_button_pressed"]
